luban_parser/lubanParser.py
# Generated from luban.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lubanParser ( Parser ):

    grammarFileName = "luban.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "','", "'['", "']'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "T_ADD", "T_SUB", "T_MUL", 
                      "T_DIV", "T_MOD", "T_INT", "T_FLOAT", "T_STRING", 
                      "T_INTS", "T_FLOATS", "T_STRINGS", "IDENTIFIER", "INTEGER_LIST", 
                      "INTEGER", "DECIMAL_LIST", "DECIMAL", "STRING_LIST", 
                      "STRING", "WS" ]

    RULE_start = 0
    RULE_arithmetic_expression = 1
    RULE_type_marker = 2

    ruleNames =  [ "start", "arithmetic_expression", "type_marker" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T_ADD=6
    T_SUB=7
    T_MUL=8
    T_DIV=9
    T_MOD=10
    T_INT=11
    T_FLOAT=12
    T_STRING=13
    T_INTS=14
    T_FLOATS=15
    T_STRINGS=16
    IDENTIFIER=17
    INTEGER_LIST=18
    INTEGER=19
    DECIMAL_LIST=20
    DECIMAL=21
    STRING_LIST=22
    STRING=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic_expression(self):
            return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,0)


        def EOF(self):
            return self.getToken(lubanParser.EOF, 0)

        def getRuleIndex(self):
            return lubanParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = lubanParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.arithmetic_expression(0)
            self.state = 7
            self.match(lubanParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arithmetic_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return lubanParser.RULE_arithmetic_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PlainArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self):
            return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlainArithmeticExpression" ):
                listener.enterPlainArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlainArithmeticExpression" ):
                listener.exitPlainArithmeticExpression(self)


    class AddArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)

        def T_ADD(self):
            return self.getToken(lubanParser.T_ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddArithmeticExpression" ):
                listener.enterAddArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddArithmeticExpression" ):
                listener.exitAddArithmeticExpression(self)


    class StringArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(lubanParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringArithmeticExpression" ):
                listener.enterStringArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringArithmeticExpression" ):
                listener.exitStringArithmeticExpression(self)


    class IntegerArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(lubanParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerArithmeticExpression" ):
                listener.enterIntegerArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerArithmeticExpression" ):
                listener.exitIntegerArithmeticExpression(self)


    class DecimalArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DECIMAL(self):
            return self.getToken(lubanParser.DECIMAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimalArithmeticExpression" ):
                listener.enterDecimalArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimalArithmeticExpression" ):
                listener.exitDecimalArithmeticExpression(self)


    class FuncArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(lubanParser.IDENTIFIER, 0)
        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncArithmeticExpression" ):
                listener.enterFuncArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncArithmeticExpression" ):
                listener.exitFuncArithmeticExpression(self)


    class ColumnArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(lubanParser.IDENTIFIER, 0)
        def type_marker(self):
            return self.getTypedRuleContext(lubanParser.Type_markerContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnArithmeticExpression" ):
                listener.enterColumnArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnArithmeticExpression" ):
                listener.exitColumnArithmeticExpression(self)


    class DivArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)

        def T_DIV(self):
            return self.getToken(lubanParser.T_DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivArithmeticExpression" ):
                listener.enterDivArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivArithmeticExpression" ):
                listener.exitDivArithmeticExpression(self)


    class SubArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)

        def T_SUB(self):
            return self.getToken(lubanParser.T_SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubArithmeticExpression" ):
                listener.enterSubArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubArithmeticExpression" ):
                listener.exitSubArithmeticExpression(self)


    class IntegerLISTArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER_LIST(self):
            return self.getToken(lubanParser.INTEGER_LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegerLISTArithmeticExpression" ):
                listener.enterIntegerLISTArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegerLISTArithmeticExpression" ):
                listener.exitIntegerLISTArithmeticExpression(self)


    class ModArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)

        def T_MOD(self):
            return self.getToken(lubanParser.T_MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModArithmeticExpression" ):
                listener.enterModArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModArithmeticExpression" ):
                listener.exitModArithmeticExpression(self)


    class RuntTimeFuncArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(lubanParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuntTimeFuncArithmeticExpression" ):
                listener.enterRuntTimeFuncArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuntTimeFuncArithmeticExpression" ):
                listener.exitRuntTimeFuncArithmeticExpression(self)


    class DecimalLISTArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DECIMAL_LIST(self):
            return self.getToken(lubanParser.DECIMAL_LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimalLISTArithmeticExpression" ):
                listener.enterDecimalLISTArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimalLISTArithmeticExpression" ):
                listener.exitDecimalLISTArithmeticExpression(self)


    class MulArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmetic_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lubanParser.Arithmetic_expressionContext)
            else:
                return self.getTypedRuleContext(lubanParser.Arithmetic_expressionContext,i)

        def T_MUL(self):
            return self.getToken(lubanParser.T_MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulArithmeticExpression" ):
                listener.enterMulArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulArithmeticExpression" ):
                listener.exitMulArithmeticExpression(self)


    class StringLISTArithmeticExpressionContext(Arithmetic_expressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a lubanParser.Arithmetic_expressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_LIST(self):
            return self.getToken(lubanParser.STRING_LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLISTArithmeticExpression" ):
                listener.enterStringLISTArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLISTArithmeticExpression" ):
                listener.exitStringLISTArithmeticExpression(self)



    def arithmetic_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = lubanParser.Arithmetic_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_arithmetic_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = lubanParser.RuntTimeFuncArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 10
                self.match(lubanParser.IDENTIFIER)
                self.state = 11
                self.match(lubanParser.T__0)
                self.state = 12
                self.match(lubanParser.T__1)
                pass

            elif la_ == 2:
                localctx = lubanParser.FuncArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 13
                self.match(lubanParser.IDENTIFIER)
                self.state = 14
                self.match(lubanParser.T__0)
                self.state = 15
                self.arithmetic_expression(0)
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 16
                    self.match(lubanParser.T__2)
                    self.state = 17
                    self.arithmetic_expression(0)
                    self.state = 22
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 23
                self.match(lubanParser.T__1)
                pass

            elif la_ == 3:
                localctx = lubanParser.ColumnArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 25
                self.match(lubanParser.IDENTIFIER)
                self.state = 27
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.type_marker()


                pass

            elif la_ == 4:
                localctx = lubanParser.StringArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 29
                self.match(lubanParser.STRING)
                pass

            elif la_ == 5:
                localctx = lubanParser.IntegerArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 30
                self.match(lubanParser.INTEGER)
                pass

            elif la_ == 6:
                localctx = lubanParser.DecimalArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 31
                self.match(lubanParser.DECIMAL)
                pass

            elif la_ == 7:
                localctx = lubanParser.StringLISTArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 32
                self.match(lubanParser.STRING_LIST)
                pass

            elif la_ == 8:
                localctx = lubanParser.IntegerLISTArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 33
                self.match(lubanParser.INTEGER_LIST)
                pass

            elif la_ == 9:
                localctx = lubanParser.DecimalLISTArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 34
                self.match(lubanParser.DECIMAL_LIST)
                pass

            elif la_ == 10:
                localctx = lubanParser.PlainArithmeticExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 35
                self.match(lubanParser.T__0)
                self.state = 36
                self.arithmetic_expression(0)
                self.state = 37
                self.match(lubanParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 56
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = lubanParser.ModArithmeticExpressionContext(self, lubanParser.Arithmetic_expressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic_expression)
                        self.state = 41
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 42
                        self.match(lubanParser.T_MOD)
                        self.state = 43
                        self.arithmetic_expression(16)
                        pass

                    elif la_ == 2:
                        localctx = lubanParser.MulArithmeticExpressionContext(self, lubanParser.Arithmetic_expressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic_expression)
                        self.state = 44
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 45
                        self.match(lubanParser.T_MUL)
                        self.state = 46
                        self.arithmetic_expression(15)
                        pass

                    elif la_ == 3:
                        localctx = lubanParser.DivArithmeticExpressionContext(self, lubanParser.Arithmetic_expressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic_expression)
                        self.state = 47
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 48
                        self.match(lubanParser.T_DIV)
                        self.state = 49
                        self.arithmetic_expression(14)
                        pass

                    elif la_ == 4:
                        localctx = lubanParser.AddArithmeticExpressionContext(self, lubanParser.Arithmetic_expressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic_expression)
                        self.state = 50
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 51
                        self.match(lubanParser.T_ADD)
                        self.state = 52
                        self.arithmetic_expression(13)
                        pass

                    elif la_ == 5:
                        localctx = lubanParser.SubArithmeticExpressionContext(self, lubanParser.Arithmetic_expressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmetic_expression)
                        self.state = 53
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 54
                        self.match(lubanParser.T_SUB)
                        self.state = 55
                        self.arithmetic_expression(12)
                        pass

             
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Type_markerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_INT(self):
            return self.getToken(lubanParser.T_INT, 0)

        def T_FLOAT(self):
            return self.getToken(lubanParser.T_FLOAT, 0)

        def T_STRING(self):
            return self.getToken(lubanParser.T_STRING, 0)

        def T_INTS(self):
            return self.getToken(lubanParser.T_INTS, 0)

        def T_FLOATS(self):
            return self.getToken(lubanParser.T_FLOATS, 0)

        def T_STRINGS(self):
            return self.getToken(lubanParser.T_STRINGS, 0)

        def getRuleIndex(self):
            return lubanParser.RULE_type_marker

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_marker" ):
                listener.enterType_marker(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_marker" ):
                listener.exitType_marker(self)




    def type_marker(self):

        localctx = lubanParser.Type_markerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_marker)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(lubanParser.T__3)
            self.state = 62
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 129024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(lubanParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.arithmetic_expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def arithmetic_expression_sempred(self, localctx:Arithmetic_expressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 15)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 11)
         




